# HashmapBenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: README.md  create_hash_join_data.py  process_amazon.py
src/: main.cpp
src/benchmarks/: benchmark.hpp  benchmarks.hpp  wordcount.hpp
src/benchmarks/cache/: cache.hpp  junction.hpp  libcuckoo.hpp  stdmap.hpp  tbbmap.hpp
src/benchmarks/hashjoin/: hashjoin.hpp  junction.hpp  libcuckoo.hpp  stdmap.hpp  tbbmap.hpp
src/benchmarks/wordcount/: interface.hpp  libcuckoo.hpp  stdmap.hpp  tbbmap.hpp  wordcount.hpp
src/utils/: debug.hpp  json_serializer.hpp  semaphore.hpp  timer.hpp  work_queue.hpp
turf_options/mingw/: turf_userconfig.h.in
visualizer/src/: App.svelte
visualizer/src/Components/: FileDnD.svelte  Graph.svelte  PopupBubble.svelte  Visualizer.svelte
visualizer/src/Types/: BenchmarkResult.ts  FileContent.ts
